--- a/Main/Source/ScenarioObjects.nuspec
+++ b/Main/Source/ScenarioObjects.nuspec
@@ -3,20 +3,20 @@
 <package >
   <metadata>
     <id>ScenarioObjects</id>
-    <version>1.0.0.3</version>
+    <version>1.0.0.4</version>
     <title>ScenarioObjects</title>
     <authors>Lance Hilliard</authors>
     <owners>Lance Hilliard</owners>
     <projectUrl>https://github.com/lancehilliard/ScenarioObjects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>ScenarioObjects is a spec-writing template for focusing more on behaviors and less on arbitrary values.</description>
-    <releaseNotes>Upgraded Foo dependency to version 1.0.2.0</releaseNotes>
+    <releaseNotes>Made the Result field static and upgraded Foo dependency to version 1.0.3.0</releaseNotes>
     <copyright>Copyright 2012</copyright>
     <tags></tags>
     <dependencies>
       <dependency id="machine.specifications" version="0.5.6.0" />
       <dependency id="RhinoMocks" version="3.6.1" />
-      <dependency id="Foo" version="1.0.2.0" />
+      <dependency id="Foo" version="1.0.3.0" />
     </dependencies>
   </metadata>
 </package>
