--- a/Main/Source/ScenarioObjects.nuspec
+++ b/Main/Source/ScenarioObjects.nuspec
@@ -2,20 +2,20 @@
 <package >
   <metadata>
     <id>ScenarioObjects</id>
-    <version>1.0.0.6</version>
+    <version>1.0.0.7</version>
     <title>ScenarioObjects</title>
     <authors>Lance Hilliard</authors>
     <owners>Lance Hilliard</owners>
     <projectUrl>https://github.com/lancehilliard/ScenarioObjects</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>ScenarioObjects is a spec-writing template for focusing more on behaviors and less on arbitrary values.</description>
-    <releaseNotes>Upgraded Foo dependency to version 1.0.4.0 (allows support for more mocking frameworks)</releaseNotes>
+    <releaseNotes>Upgraded Foo dependency to version 1.0.7.2 (adds values and duration reporting)</releaseNotes>
     <copyright>Copyright 2012</copyright>
     <tags></tags>
     <dependencies>
       <dependency id="machine.specifications" version="0.5.6.0" />
       <dependency id="RhinoMocks" version="3.6.1" />
-      <dependency id="Foo" version="1.0.4.0" />
+      <dependency id="Foo" version="1.0.7.2" />
     </dependencies>
   </metadata>
 </package>
